--- a/Makefile.target
+++ b/Makefile.target
@@ -31,7 +31,8 @@ CFLAGS+= -Wall -Wredundant-decls -Wshadow -Wpointer-arith
 CFLAGS+= -Wstrict-prototypes -Wmissing-declarations -Wundef -Wendif-labels
 CFLAGS+= -Wstrict-aliasing -Wwrite-strings -Wmissing-prototypes -Wnested-externs
 CFLAGS+= -Wbuiltin-declaration-mismatch -Wimplicit-fallthrough -Woverride-init -Wno-maybe-uninitialized
-CFLAGS+= -Werror
+CFLAGS+=-Wno-error=implicit-function-declaration
+#CFLAGS+= -Werror
 # Flags for dependency generation
 CFLAGS+= -MMD -MP -MT $@ -MF '$(*D)/$(*F).d'
 INCLUDES := -I$(SRCDIR)/include -I$(SRCDIR)/kernel/include -I$(ODIR)/target/include
@@ -54,16 +55,32 @@ all: versions dictionaries host-libraries target-libraries host-executables targ
 
 versions: $(ODIR)/target/include/openbios-version.h $(ODIR)/forth/version.fs
 
+#Original version and build date info generation
+#$(ODIR)/forth/version.fs:
+#	$(call quiet-command,true, "  GEN   $(TARGET_DIR)$@")
+#	@DATE="$(shell echo `LC_ALL=C TZ=UTC date +'%b %e %Y %H:%M'`)" ;  \
+#		( echo ": builddate \" $$DATE\" ; " ;     \
+#		  echo ": version \" $(VERSION)\" ; " ; ) \
+#		  > $(dir $@)/version.fs
+#
+#$(ODIR)/target/include/openbios-version.h:
+#	$(call quiet-command,true, "  GEN   $(TARGET_DIR)$@")
+#	@DATE="$(shell echo `LC_ALL=C TZ=UTC date +'%b %e %Y %H:%M'`)" ; \
+#          ( echo "#define OPENBIOS_BUILD_DATE \"$$DATE\"" ; \
+#           echo "#define OPENBIOS_VERSION_STR \"$(VERSION)\"" ; ) \
+#         > $(dir $@)/openbios-version.h
+
+#Custom version and build date info generation
 $(ODIR)/forth/version.fs:
 	$(call quiet-command,true, "  GEN   $(TARGET_DIR)$@")
-	@DATE="$(shell echo `LC_ALL=C TZ=UTC date +'%b %e %Y %H:%M'`)" ;  \
+	@DATE="$(shell echo `LC_ALL=C date +'%a, %b %e, %Y at %r %Z'`)" ;  \
 		( echo ": builddate \" $$DATE\" ; " ;     \
 		  echo ": version \" $(VERSION)\" ; " ; ) \
 		  > $(dir $@)/version.fs
 
 $(ODIR)/target/include/openbios-version.h:
 	$(call quiet-command,true, "  GEN   $(TARGET_DIR)$@")
-	@DATE="$(shell echo `LC_ALL=C TZ=UTC date +'%b %e %Y %H:%M'`)" ; \
+	@DATE="$(shell echo `LC_ALL=C date +'%a, %b %e, %Y at %r %Z'`)" ; \
           ( echo "#define OPENBIOS_BUILD_DATE \"$$DATE\"" ; \
            echo "#define OPENBIOS_VERSION_STR \"$(VERSION)\"" ; ) \
          > $(dir $@)/openbios-version.h
